--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
 	<div class="container navbar-content">
 		<!-- Site title -->
-		<button type="button" id="theme-button" class="btn navbar-brand">jvernon.net</button>
+		<button type="button" id="theme-button" class="btn navbar-brand">kaboom.cat</button>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<i class="bi bi-list"></i>
